k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-site
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-site
  template:
    metadata:
      labels:
        app: portfolio-site
    spec:
      containers:
        - name: portfolio-site
          image: romyt/rt-portfolio-site:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
