k8s/contact-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-api
  namespace: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contact-api
  template:
    metadata:
      labels:
        app: contact-api
    spec:
      containers:
        - name: contact-api
          image: romyt/portfolio-contact-api:v1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: contact-api
  namespace: portfolio
spec:
  selector:
    app: contact-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
