k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-site
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio-site
  ports:
    - name: http
      port: 80
      targetPort: 80
