k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-site
  namespace: portfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tohouri.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: contact-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-site
                port:
                  number: 80
  tls:
    - hosts:
        - tohouri.com
      secretName: tohouri-com-tls
